# internal/services/product-service/product/features/getting_products/endpoints/v1/get_products_endpoint.go
@@ -4,8 +4,8 @@ import (
 	"github.com/labstack/echo/v4"
 	"github.com/mehdihadeli/go-mediatr"
 	"github.com/meysamhadeli/shop-golang-microservices/internal/pkg/utils"
-	dtos2 "github.com/meysamhadeli/shop-golang-microservices/internal/services/product-service/product/dtos"
-	"github.com/meysamhadeli/shop-golang-microservices/internal/services/product-service/product/features/getting_products"
+	v1 "github.com/meysamhadeli/shop-golang-microservices/internal/services/product-service/product/features/getting_products/dtos/v1"
+	query_v1 "github.com/meysamhadeli/shop-golang-microservices/internal/services/product-service/product/features/getting_products/queries/v1"
 	"github.com/meysamhadeli/shop-golang-microservices/internal/services/product-service/shared"
 	"net/http"
 )
@@ -28,8 +28,8 @@ func (ep *getProductsEndpoint) MapRoute() {
 // @Description Get all products
 // @Accept json
 // @Produce json
-// @Param getProductsRequestDto query dtos.GetProductsRequestDto false "GetProductsRequestDto"
-// @Success 200 dtos.GetProductsResponseDto
+// @Param GetProductsRequestDto query v1.GetProductsRequestDto false "GetProductsRequestDto"
+// @Success 200 {object} v1.GetProductsResponseDto
 // @Router /api/v1/products [get]
 func (ep *getProductsEndpoint) getAllProducts() echo.HandlerFunc {
 	return func(c echo.Context) error {
@@ -41,15 +41,15 @@ func (ep *getProductsEndpoint) getAllProducts() echo.HandlerFunc {
 			return echo.NewHTTPError(http.StatusBadRequest, err)
 		}
 
-		request := &dtos2.GetProductsRequestDto{ListQuery: listQuery}
+		request := &v1.GetProductsRequestDto{ListQuery: listQuery}
 		if err := c.Bind(request); err != nil {
 			ep.Configuration.Log.Warn("Bind", err)
 			return echo.NewHTTPError(http.StatusBadRequest, err)
 		}
 
-		query := &getting_products.GetProducts{ListQuery: request.ListQuery}
+		query := query_v1.NewGetProducts(request.ListQuery)
 
-		queryResult, err := mediatr.Send[*getting_products.GetProducts, *dtos2.GetProductsResponseDto](ctx, query)
+		queryResult, err := mediatr.Send[*query_v1.GetProducts, *v1.GetProductsResponseDto](ctx, query)
 
 		if err != nil {
 			ep.Configuration.Log.Warnf("GetProducts", err)
