# internal/services/product-service/product/features/searching_product/endpoints/v1/search_products_endpoint.go
@@ -4,8 +4,8 @@ import (
 	"github.com/labstack/echo/v4"
 	"github.com/mehdihadeli/go-mediatr"
 	"github.com/meysamhadeli/shop-golang-microservices/internal/pkg/utils"
-	dtos2 "github.com/meysamhadeli/shop-golang-microservices/internal/services/product-service/product/dtos"
-	"github.com/meysamhadeli/shop-golang-microservices/internal/services/product-service/product/features/searching_product"
+	v1 "github.com/meysamhadeli/shop-golang-microservices/internal/services/product-service/product/features/searching_product/dtos/v1"
+	query_v1 "github.com/meysamhadeli/shop-golang-microservices/internal/services/product-service/product/features/searching_product/queries/v1"
 	"github.com/meysamhadeli/shop-golang-microservices/internal/services/product-service/shared"
 	"net/http"
 )
@@ -23,14 +23,14 @@ func (ep *searchProductsEndpoint) MapRoute() {
 }
 
 // SearchProducts
-// @Tags Products
-// @Summary Search products
+// @Tags        Products
+// @Summary     Search products
 // @Description Search products
-// @Accept json
-// @Produce json
-// @Param searchProductsRequestDto query dtos.SearchProductsRequestDto false "SearchProductsRequestDto"
-// @Success 200 dtos.SearchProductsResponseDto
-// @Router /api/v1/products/search [get]
+// @Accept      json
+// @Produce     json
+// @Param       searchProductsRequestDto query    v1.SearchProductsRequestDto false "SearchProductsRequestDto"
+// @Success     200                      {object} v1.SearchProductsResponseDto[dto.ProductDto]
+// @Router      /api/v1/products/search [get]
 func (ep *searchProductsEndpoint) searchProducts() echo.HandlerFunc {
 	return func(c echo.Context) error {
 
@@ -42,7 +42,7 @@ func (ep *searchProductsEndpoint) searchProducts() echo.HandlerFunc {
 			return echo.NewHTTPError(http.StatusBadRequest, err)
 		}
 
-		request := &dtos2.SearchProductsRequestDto{ListQuery: listQuery}
+		request := &v1.SearchProductsRequestDto{ListQuery: listQuery}
 
 		// https://echo.labstack.com/guide/binding/
 		if err := c.Bind(request); err != nil {
@@ -50,14 +50,14 @@ func (ep *searchProductsEndpoint) searchProducts() echo.HandlerFunc {
 			return echo.NewHTTPError(http.StatusBadRequest, err)
 		}
 
-		query := &searching_product.SearchProducts{SearchText: request.SearchText, ListQuery: request.ListQuery}
+		query := &query_v1.SearchProducts{SearchText: request.SearchText, ListQuery: request.ListQuery}
 
 		if err := ep.Configuration.Validator.StructCtx(ctx, query); err != nil {
 			ep.Configuration.Log.Errorf("(validate) err: {%v}", err)
 			return echo.NewHTTPError(http.StatusBadRequest, err)
 		}
 
-		queryResult, err := mediatr.Send[*searching_product.SearchProducts, *dtos2.SearchProductsResponseDto](ctx, query)
+		queryResult, err := mediatr.Send[*query_v1.SearchProducts, *v1.SearchProductsResponseDto](ctx, query)
 
 		if err != nil {
 			ep.Configuration.Log.Warn("SearchProducts", err)
