# internal/services/product-service/product/features/searching_product/queries/v1/search_products_handler.go
@@ -1,0 +1,36 @@
+package v1
+
+import (
+	"context"
+	"github.com/meysamhadeli/shop-golang-microservices/internal/pkg/logger"
+	"github.com/meysamhadeli/shop-golang-microservices/internal/pkg/utils"
+	"github.com/meysamhadeli/shop-golang-microservices/internal/services/product-service/config"
+	"github.com/meysamhadeli/shop-golang-microservices/internal/services/product-service/product/contracts"
+	"github.com/meysamhadeli/shop-golang-microservices/internal/services/product-service/product/dtos"
+	search_dtos "github.com/meysamhadeli/shop-golang-microservices/internal/services/product-service/product/features/searching_product/dtos/v1"
+)
+
+type SearchProductsHandler struct {
+	log    logger.ILogger
+	cfg    *config.Config
+	pgRepo contracts.ProductRepository
+}
+
+func NewSearchProductsHandler(log logger.ILogger, cfg *config.Config, pgRepo contracts.ProductRepository) *SearchProductsHandler {
+	return &SearchProductsHandler{log: log, cfg: cfg, pgRepo: pgRepo}
+}
+
+func (c *SearchProductsHandler) Handle(ctx context.Context, query *SearchProducts) (*search_dtos.SearchProductsResponseDto, error) {
+
+	products, err := c.pgRepo.SearchProducts(ctx, query.SearchText, query.ListQuery)
+	if err != nil {
+		return nil, err
+	}
+
+	listResultDto, err := utils.ListResultToListResultDto[*dtos.ProductDto](products)
+	if err != nil {
+		return nil, err
+	}
+
+	return &search_dtos.SearchProductsResponseDto{Products: listResultDto}, nil
+}
